--- a/BR/BR.csproj
+++ b/BR/BR.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="firebasedatabase.net" Version="4.0.4" />
     <PackageReference Include="MailKit" Version="2.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.2" />
