--- a/BR/appsettings.json
+++ b/BR/appsettings.json
@@ -8,13 +8,19 @@
   "ConnectionStrings": {
     "DefaultConnection1": "Server=.;Database=;User Id=admin;Password=admin",
     "DefaultConnection2": "Server=.;Database=BR;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "DefaultConnection": "Server=localhost;Port=5432;Database=BR;User Id=postgres;Password=1919;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=BR_1;User Id=postgres;Password=1919;"
   },
-  "EmailConfiguration": {
+  "EmailConfiguration2": {
     "SmtpServer": "smtp.mail.ru",
     "SmtpPort": 465,
     "SmtpUsername": "tgy.ntl@mail.ru",
     "SmtpPassword": "nattog1111",
+    "MaxCount": 2
+  },
+  "EmailConfiguration": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 465,
+   
     "MaxCount": 2
   },
   "AuthOptions": {
