--- a/BR/appsettings.json
+++ b/BR/appsettings.json
@@ -20,7 +20,8 @@
   "EmailConfiguration": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 465,
-   
+    "SmtpUsername": "tgy.ntl@mail.ru",
+    "SmtpPassword": "nattog1111",
     "MaxCount": 2
   },
   "AuthOptions": {
