--- a/BR/appsettings.json
+++ b/BR/appsettings.json
@@ -73,6 +73,12 @@
   "NotificationHubConfiguration": {
     "ConnectionString": "Endpoint=sb://rbnotifhubnamespace.servicebus.windows.net/;SharedAccessKeyName=DefaultFullSharedAccessSignature;SharedAccessKey=r/EEQqDGgAr4YASBqy2oWSoeyLvDyzQAACnNw0GSH9c=",
     "HubName": "RBNotifHubNew"
+  },
+
+  "Redis": {
+    "ConnectionString": "BRRedis.redis.cache.windows.net:6380,password=K0r3lnG5Fq4R5mnlKyO0yib0mKouV++b4dqbtlOOQNo=,ssl=True,abortConnect=False",
+    //"ConnectionStringSecret": "https://musicplayer94keyvault.vault.azure.net/secrets/redisSecret",
+    "InstanceName": "BRRedis"
   }
 
 
