--- a/BR/BR.csproj
+++ b/BR/BR.csproj
@@ -16,6 +16,16 @@
     <Compile Remove="Migrations\20200319103749_edit_models.Designer.cs" />
     <Compile Remove="Migrations\20200319202618_add_barReservation1.cs" />
     <Compile Remove="Migrations\20200319202618_add_barReservation1.Designer.cs" />
+    <Compile Remove="Migrations\20200323115341_add_organization_key.cs" />
+    <Compile Remove="Migrations\20200323115341_add_organization_key.Designer.cs" />
+    <Compile Remove="Migrations\20200323123040_add_organization_key.cs" />
+    <Compile Remove="Migrations\20200323123040_add_organization_key.Designer.cs" />
+    <Compile Remove="Migrations\20200323123805_add_organization_key.cs" />
+    <Compile Remove="Migrations\20200323123805_add_organization_key.Designer.cs" />
+    <Compile Remove="Migrations\20200323124040_change_client.cs" />
+    <Compile Remove="Migrations\20200323124040_change_client.Designer.cs" />
+    <Compile Remove="Migrations\20200323124306_change_client.cs" />
+    <Compile Remove="Migrations\20200323124306_change_client.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
