--- a/BR/BR.csproj
+++ b/BR/BR.csproj
@@ -12,6 +12,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200425082213_waiter-edit.cs" />
+    <Compile Remove="Migrations\20200425082213_waiter-edit.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
