--- a/BR/appsettings.json
+++ b/BR/appsettings.json
@@ -8,8 +8,9 @@
   "ConnectionStrings": {
     "SQLConnectionString": "Server=.;Database=BR;Trusted_Connection=True;MultipleActiveResultSets=true",
     "PostgreSQLConnectionString": "Server=localhost;Port=5432;Database=BRR;User Id=postgres;Password=1919;",
-    "AzureDbConnectionStringOld": "Server=tcp:rbserver2020.database.windows.net,1433;Initial Catalog=BRDBase;Persist Security Info=False;User ID=rbadmin;Password=RbSQLServer2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "AzureDbConnectionString": "Server=tcp:rbserver2020.database.windows.net,1433;Initial Catalog=RbDataBase;Persist Security Info=False;User ID=rbadmin;Password=RbSQLServer2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AzureDbConnectionStringOld2": "Server=tcp:rbserver2020.database.windows.net,1433;Initial Catalog=BRDBase;Persist Security Info=False;User ID=rbadmin;Password=RbSQLServer2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AzureDbConnectionStringOld1": "Server=tcp:rbserver2020.database.windows.net,1433;Initial Catalog=RbDataBase;Persist Security Info=False;User ID=rbadmin;Password=RbSQLServer2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "AzureDbConnectionString": "Server=tcp:br-sql-server.database.windows.net,1433;Initial Catalog=brdatabase;Persist Security Info=False;User ID=bradmin;Password=BRsqladmin2020;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "AzureStorageAccountOptions": {
